feat(api): Add latest version to schema list
